--- a/package.json
+++ b/package.json
@@ -172,16 +172,15 @@
     "@mozilla/readability": "^0.6.0",
     "@napi-rs/canvas": "^0.1.82",
     "@types/react-resizable": "^3.0.8",
-    "@xterm/addon-clipboard": "^0.1.0",
-    "@xterm/addon-fit": "^0.10.0",
-    "@xterm/addon-image": "^0.8.0",
-    "@xterm/addon-unicode11": "^0.8.0",
-    "@xterm/addon-web-links": "^0.11.0",
-    "@xterm/addon-webgl": "^0.18.0",
-    "@xterm/xterm": "^5.5.0",
+    "@xterm/addon-clipboard": "^0.2.0",
+    "@xterm/addon-fit": "^0.11.0",
+    "@xterm/addon-image": "^0.9.0",
+    "@xterm/addon-unicode11": "^0.9.0",
+    "@xterm/addon-web-links": "^0.12.0",
+    "@xterm/addon-webgl": "^0.19.0",
+    "@xterm/xterm": "^6.0.0",
     "assert": "^2.1.0",
     "basic-ftp": "^5.0.5",
-    "browserify-zlib": "^0.2.0",
     "dommatrix": "^0.1.1",
     "dompurify": "^3.3.0",
     "electron-log": "^5.4.3",
@@ -217,18 +216,19 @@
     "@babel/preset-env": "^7.29.0",
     "@babel/preset-react": "^7.28.5",
     "@electron/rebuild": "^4.0.3",
-    "babel-loader": "^9.1.3",
+    "babel-loader": "^10.0.0",
     "baseline-browser-mapping": "^2.9.11",
+    "browserify-zlib": "^0.2.0",
     "buffer": "^6.0.3",
     "concurrently": "^9.2.1",
-    "copy-webpack-plugin": "^13.0.0",
+    "copy-webpack-plugin": "^13.0.1",
     "cross-env": "^10.0.0",
-    "crypto-browserify": "^3.3.0",
+    "crypto-browserify": "^3.12.1",
     "css-loader": "^7.1.4",
     "electron": "^38.1.2",
-    "electron-builder": "^26.4.0",
+    "electron-builder": "^26.7.0",
     "electron-reloader": "^1.2.3",
-    "html-webpack-plugin": "^5.6.3",
+    "html-webpack-plugin": "^5.6.6",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
     "process": "^0.11.10",
@@ -238,7 +238,7 @@
     "url": "^0.11.4",
     "util": "^0.12.5",
     "wait-on": "^9.0.4",
-    "webpack": "^5.89.0",
+    "webpack": "^5.105.2",
     "webpack-cli": "^6.0.1"
   },
   "optionalDependencies": {
@@ -247,6 +247,8 @@
   "overrides": {
     "ssh2": "1.17.0",
     "tar": "7.5.7",
-    "elliptic": "6.6.1"
+    "elliptic": "6.6.1",
+    "ajv": "^8.18.0",
+    "ajv-keywords": "^5.1.0"
   }
 }
